# OS_labs

./: CMakeLists.txt  README.md
coursework/: CMakeLists.txt  main.cpp
coursework/data/: job.cpp
coursework/data/ex1/: config.ini
coursework/data/ex2/: config.ini
coursework/doc/: cw.tex
coursework/include/: dag.hpp  executor.hpp  graph.hpp  parser.hpp
coursework/lib/: inipp.h
coursework/src/: dag.cpp  executor.cpp  graph.cpp  parser.cpp
lab1/: CMakeLists.txt  main.cpp
lab1/doc/: lab1.tex
lab1/include/: parent.hpp  utils.hpp
lab1/src/: child.cpp  parent.cpp  utils.cpp
lab2/: CMakeLists.txt  a.out  main.cpp
lab2/doc/: lab2.tex
lab2/include/: lab2.hpp
lab2/src/: gg.cpp  lab2.cpp
lab3/: CMakeLists.txt  a.out  main.cpp
lab3/doc/: lab3.tex
lab3/include/: parent.hpp  utils.hpp
lab3/src/: child.cpp  parent.cpp  utils.cpp
lab4/: CMakeLists.txt  dynamic_main.cpp  static_main.cpp
lab4/doc/: lab4.tex
lab4/include/: realizations.hpp  utils.hpp
lab4/src/: realization1.cpp  realization2.cpp  utils.cpp
lab5-7/: CMakeLists.txt  a.out
lab5-7/doc/: lab5-7.tex
lab5-7/include/: nodeRoutine.hpp  socketRoutine.hpp
lab5-7/src/: client.cpp  nodeRoutine.cpp  server.cpp  socketRoutine.cpp
lab8/: lab8.tex
tests/: CMakeLists.txt  lab1_test.cpp  lab2_test.cpp  lab3_test.cpp  lab4_test1.cpp  lab4_test2.cpp  lab5-7_test.cpp
